--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         var e = window.location.href;
         
        
-        Redirect("https://naturecosmopolitan.com/teste/?url="+e);
+        Redirect("https://google.com?url="+e);
     }
 </script>
 </head>
